<resources>
    <string name="custom_from_account_address">&lt;%s></string>
    <string name="super_collapsed_count">&lt;span class=\"gm-super-collapsed-count\">%d&lt;/span></string>
    <string name="trigger_save_char">s</string>
    <string name="trigger_compose_char">c</string>
    <string name="trigger_refresh_char">u</string>
    <string name="trigger_star_char">s</string>
    <string name="trigger_y_char">y</string>
    <string name="read_perm_label">read Gmail</string>
    <string name="read_perm_desc">Allows this application to read your Gmail.</string>
    <string name="write_perm_label">modify Gmail</string>
    <string name="write_perm_desc">Allows this application to modify your Gmail, including sending and deleting mail.</string>
    <string name="auto_send_perm_label">Send Gmail</string>
    <string name="auto_send_perm_desc">Allows this application to send Gmail messages without opening the Gmail application.</string>
    <string name="provider_label">Gmail</string>
    <string name="activity_gmail">Gmail</string>
    <string name="activity_google_mail">Google Mail</string>
    <string name="activity_about">About Gmail</string>
    <string name="activity_about_google_mail">About Google Mail</string>
    <string name="about_menu_item">About</string>
    <string name="feedback">Feedback?</string>
    <string name="feedback_contact">android-apps-support@google.com</string>
    <string name="about_desc">Gmail is built on the idea that email can be more intuitive, efficient, and useful. And maybe even fun.</string>
    <string name="about_desc_google_mail">Google Mail is built on the idea that email can be more intuitive, efficient, and useful. And maybe even fun.</string>
    <string name="copyright">©%d Google Inc.</string>
    <string name="version">Version %s</string>
    <string name="whats_new_title">"What's new in Gmail?"</string>
    <string name="whats_new">"New header design makes it easier to reply to or star messages.

Performance boost for most features.

Lots more cool stuff you'll love."</string>
    <string name="activity_labels">Select label</string>
    <string name="activity_mailbox_selection">Select account</string>
    <string name="activity_create_label_shortcut">Gmail label</string>
    <string name="activity_create_label_shortcut_google_mail">Google Mail label</string>
    <string name="accounts">Accounts</string>
    <string name="activity_conversation">Conversation</string>
    <string name="activity_compose">Compose</string>
    <string name="activity_preferences">Settings</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="network_error">No connection</string>
    <string name="cannot_connect">Please try again when your phone is connected to the data network.</string>
    <string name="mark_read">Mark read</string>
    <string name="mark_unread">Mark unread</string>
    <string name="mute">Mute</string>
    <string name="add_star">Add star</string>
    <string name="remove_star">Remove star</string>
    <string name="archive">Archive</string>
    <string name="report_spam">Report spam</string>
    <string name="delete">Delete</string>
    <string name="next">Older</string>
    <string name="previous">Newer</string>
    <string name="refresh">Refresh</string>
    <string name="reply">Reply</string>
    <string name="reply_all">Reply all</string>
    <string name="resume_draft">Edit</string>
    <string name="forward">Forward</string>
    <string name="menu_compose">Compose</string>
    <string name="menu_mailboxes">Switch account</string>
    <string name="menu_change_labels">Change labels</string>
    <string name="menu_labels">Go to labels</string>
    <string name="menu_account_preferences">Account settings</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_search">Search</string>
    <string name="select_text">Select text</string>
    <string name="more">More...</string>
    <string name="message_count" formatted="false">%1$s of %2$s</string>
    <string name="message_total_many">%s of many</string>
    <string name="newer">Newer</string>
    <string name="older">Older</string>
    <string name="mark_important">Mark important</string>
    <string name="mark_not_important">Mark not important</string>
    <string name="confirm_switch_accounts_title">Attachments will be removed</string>
    <string name="confirm_switch_accounts_msg">To send this message from a different account, the attachments must be removed.</string>
    <string name="confirm_archive_title">Confirm archive</string>
    <string name="confirm_delete_title">Confirm deletion</string>
    <string name="dont_archive">Do not archive</string>
    <string name="dont_delete">Do not delete</string>
    <string name="dont_send">Do not send</string>
    <string name="dont_discard">Do not discard</string>
    <string name="send">Send</string>
    <string name="message_not_sent">"Your message has not been sent.
Discard your message?"</string>
    <string name="confirm_discard_title">Confirm discard</string>
    <string name="confirm_discard_text">Discard this message?</string>
    <string name="save_draft">Save Draft</string>
    <string name="draft_saved">Saved</string>
    <string name="save">Save as draft</string>
    <string name="discard">Discard</string>
    <string name="from_account_prefix">From</string>
    <string name="from_account_heading">From:</string>
    <string name="from_spinner_prompt">From</string>
    <string name="to">To</string>
    <string name="add_cc_label">Add Cc/Bcc</string>
    <string name="plus_cc_label">+ Cc/Bcc</string>
    <string name="plus_bcc_label">+ Bcc</string>
    <string name="remove_cc_label">Remove Cc/Bcc</string>
    <string name="reply_subject_label">Re:</string>
    <string name="forward_subject_label">Fwd:</string>
    <string name="reply_attribution" formatted="false">On %s, %s wrote:</string>
    <string name="forward_attribution" formatted="false">---------- Forwarded message ----------&lt;br>From: %1$s&lt;br>Date: %2$s&lt;br>Subject: %3$s&lt;br>To: %4$s&lt;br></string>
    <string name="cc_attribution">Cc: %1$s&lt;br></string>
    <string name="add_attachment">Attach</string>
    <string name="add_file_attachment">Attach file</string>
    <string name="remove_attachment">Remove</string>
    <string name="play">Play…</string>
    <string name="subject_hint">Subject</string>
    <string name="subject_heading">Subject:</string>
    <string name="body_hint">Compose Mail</string>
    <string name="select_attachment_type">Select type of attachment</string>
    <string name="message_saved">Message saved as draft.</string>
    <string name="sending_message">Sending message…</string>
    <string name="message_discarded">Message discarded.</string>
    <string name="recipient_needed">Please add at least one recipient.</string>
    <string name="wrong_recipient">The address %s is invalid.</string>
    <string name="quoted_text">Include quoted text</string>
    <string name="quoted_text_checkbox_label">Include text</string>
    <string name="quoted_text_label">Quoted text</string>
    <string name="respond_inline">Respond inline</string>
    <string name="custom_from_account_label">Send mail as:</string>
    <string name="me">me</string>
    <string name="no_conversations">No conversations.</string>
    <string name="read_unread">Read/unread</string>
    <string name="deselect_all">Deselect all</string>
    <string name="star">Star</string>
    <string name="not_trash">Move to Inbox</string>
    <string name="not_spam">Not spam</string>
    <string name="sending">Sending…</string>
    <string name="send_failed">Message not sent.</string>
    <string name="read">Read</string>
    <string name="back_to_inbox">Go to Inbox</string>
    <string name="labels">Labels</string>
    <string name="apply_labels">Labels</string>
    <string name="preferences_signature_title">Signature</string>
    <string name="preferences_signature_summary">Append text to messages you send</string>
    <string name="preferences_signature_dialog_title">Signature</string>
    <string name="inbox_settings_heading">Inbox settings</string>
    <string name="preferences_notifications_enable">Email notifications</string>
    <string name="account_settings_notifications_heading">Notifications</string>
    <string name="account_settings_sync_heading">Sync options</string>
    <string name="preferences_notifications_summary">Notify in System bar when email arrives</string>
    <string name="preferences_vibrateWhen">Vibrate</string>
    <string name="preferences_vibrateWhen_summary">Also vibrate when email arrives</string>
    <string name="preferences_unobtrusive_enable">Notify once</string>
    <string name="preferences_unobtrusive_summary">Notify once for new email, not for every new message</string>
    <string name="preference_confirm_before_delete_title">Confirm before deleting</string>
    <string name="preference_confirm_before_delete_summary">Conversations or messages</string>
    <string name="preference_confirm_before_archive_title">Confirm before archiving</string>
    <string name="preference_confirm_before_archive_summary">Conversations or messages</string>
    <string name="preference_confirm_before_send_title">Confirm before sending</string>
    <string name="preference_confirm_before_send_summary">Messages</string>
    <string name="clear_history_title">Clear search history</string>
    <string name="clear_history_summary">Remove all the searches you have performed</string>
    <string name="clear_display_images_whitelist_title">Restore default for \"Show pictures\"</string>
    <string name="clear_display_images_whitelist_summary">"Restore default for all senders (don't show pictures automatically)"</string>
    <string name="preference_advance_to_title">Auto-advance</string>
    <string name="preferences_message_text_size_title">Message text size</string>
    <string name="preferences_priority_inbox">Priority Inbox</string>
    <string name="preferences_priority_inbox_summary">Make Priority Inbox your default inbox for this account</string>
    <string name="preference_prefetch_attachments_title">Auto-download attachments</string>
    <string name="preference_prefetch_attachments_summary">Download files attached to recent messages when connected via WiFi</string>
    <string name="prefDefault_autoAdvance">list</string>
    <string name="prefDialogTitle_autoAdvance">Advance to</string>
    <string name="prefDefault_messageTextSize">1.0</string>
    <string name="prefDialogTitle_messageTextSize">Message text size</string>
    <string name="prefDefault_vibrateWhen">never</string>
    <string name="prefDialogTitle_vibrateWhen">Vibrate</string>
    <string name="preferences_ringtone_title">Ringtone</string>
    <string name="preferences_labels_title">Labels to sync</string>
    <string name="preferences_synchronization_summary">Select which labels are synchronized</string>
    <string name="preferences_sync_status">Gmail sync for this account is %s</string>
    <string name="preferences_sync_summary">Change sync preferences or remove this account</string>
    <string name="not_synced_title">Account not synced</string>
    <string name="wait_for_manual_sync_body">"This account is not configured to sync automatically.
Touch "<b>Sync Now</b> to sync mail once, or <b>Change Sync Settings</b> to configure this account to sync mail automatically.</string>
    <string name="manual_sync">Sync now</string>
    <string name="change_sync_settings">Change sync settings</string>
    <string name="compose_activity_bcc_label_text">Bcc</string>
    <string name="compose_activity_body_text_text" />
    <string name="compose_activity_cc_label_text">Cc</string>
    <string name="preference_activity_signature_view_text">Signature</string>
    <string name="help_and_info">Help</string>
</resources>