<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/read" android:title="@string/read" />
    <item android:id="@id/y_button" android:alphabeticShortcut="@string/trigger_y_char" />
    <item android:icon="@drawable/ic_menu_mute" android:id="@id/mute" android:title="@string/mute" />
    <item android:id="@id/read_unread" android:title="@string/mark_read" />
    <item android:icon="@drawable/ic_menu_trash_holo_light" android:id="@id/delete" android:title="@string/delete" />
    <item android:icon="@drawable/ic_menu_star_holo_light" android:id="@id/star" android:alphabeticShortcut="@string/trigger_star_char" />
    <item android:id="@id/change_labels" android:title="@string/menu_change_labels" />
    <item android:id="@id/report_spam" android:title="@string/report_spam" />
    <item android:icon="@android:drawable/ic_menu_help" android:id="@id/help_info_menu_item" android:title="@string/help_and_info" />
    <item android:icon="@android:drawable/ic_menu_send" android:id="@id/feedback_menu_item" android:title="@string/feedback" />
</menu>
