<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_menu_refresh_holo_light" android:id="@id/refresh" android:title="@string/refresh" android:alphabeticShortcut="@string/trigger_refresh_char" />
    <item android:icon="@drawable/ic_menu_compose_normal_holo_light" android:id="@id/compose" android:title="@string/menu_compose" android:alphabeticShortcut="@string/trigger_compose_char" />
    <item android:icon="@drawable/ic_menu_accounts_holo_light" android:id="@id/mailboxes" android:title="@string/accounts" />
    <item android:icon="@drawable/ic_menu_folder_holo_light" android:id="@id/labels" android:title="@string/menu_labels" />
    <item android:icon="@drawable/ic_menu_search_holo_light" android:id="@id/search" android:title="@string/menu_search" />
    <item android:icon="@drawable/ic_menu_inbox_holo_light" android:id="@id/back_to_inbox" android:title="@string/back_to_inbox" />
    <item android:icon="@android:drawable/ic_menu_preferences" android:id="@id/preferences" android:title="@string/menu_preferences" />
    <item android:icon="@android:drawable/ic_menu_help" android:id="@id/help_info_menu_item" android:title="@string/help_and_info" />
    <item android:icon="@android:drawable/ic_menu_send" android:id="@id/feedback_menu_item" android:title="@string/feedback" />
</menu>
