<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_menu_archive_holo_light" android:id="@id/archive" android:alphabeticShortcut="@string/trigger_y_char" />
    <item android:icon="@drawable/ic_menu_folder_holo_light" android:id="@id/change_labels" android:title="@string/menu_change_labels" />
    <item android:icon="@drawable/ic_menu_star_holo_light" android:id="@id/star" android:alphabeticShortcut="@string/trigger_star_char" />
    <item android:icon="@drawable/ic_menu_mark_unread_holo_light" android:id="@id/inside_conversation_unread" android:title="@string/mark_unread" />
    <item android:icon="@android:drawable/ic_menu_delete" android:id="@id/delete" android:title="@string/delete" />
    <item android:icon="@drawable/ic_menu_inbox_holo_light" android:id="@id/back_to_inbox" android:title="@string/back_to_inbox" />
    <item android:icon="@drawable/ic_menu_mute" android:id="@id/mute" android:title="@string/mute" />
    <item android:icon="@drawable/ic_spam_normal_holo_light" android:id="@id/report_spam" android:title="@string/report_spam" />
    <item android:id="@id/select_text" android:title="@string/select_text" />
    <item android:icon="@android:drawable/ic_menu_preferences" android:id="@id/preferences" android:title="@string/menu_preferences" />
    <item android:icon="@android:drawable/ic_menu_help" android:id="@id/help_info_menu_item" android:title="@string/help_and_info" />
    <item android:icon="@android:drawable/ic_menu_send" android:id="@id/feedback_menu_item" android:title="@string/feedback" />
</menu>
