<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/change_labels" android:title="@string/menu_change_labels" android:showAsAction="always" />
    <item android:icon="@drawable/ic_menu_mark_unread_holo_light" android:id="@id/read_unread" android:title="@string/mark_read" android:showAsAction="always" />
    <item android:icon="@drawable/ic_menu_star_holo_light" android:id="@id/star" android:title="@string/star" android:showAsAction="always" />
    <item android:icon="@drawable/ic_menu_archive_holo_light" android:id="@id/y_button" android:title="@string/archive" android:alphabeticShortcut="@string/trigger_y_char" android:showAsAction="always" />
    <item android:icon="@drawable/ic_menu_trash_holo_light" android:id="@id/delete" android:title="@string/delete" android:showAsAction="always" />
    <item android:id="@id/mark_important" android:title="@string/mark_important" />
    <item android:id="@id/mark_not_important" android:title="@string/mark_not_important" />
    <item android:icon="@drawable/ic_spam_normal_holo_light" android:id="@id/report_spam" android:title="@string/report_spam" />
    <item android:icon="@drawable/ic_menu_mute" android:id="@id/mute" android:title="@string/mute" />
</menu>
