<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_menu_compose_normal_holo_light" android:id="@id/compose" android:title="@string/menu_compose" android:alphabeticShortcut="@string/trigger_compose_char" android:showAsAction="always" />
    <item android:icon="@drawable/ic_menu_trash_holo_light" android:id="@id/delete" android:title="@string/delete" android:showAsAction="always" />
    <item android:icon="@drawable/ic_menu_refresh_holo_light" android:id="@id/refresh" android:title="@string/refresh" android:alphabeticShortcut="@string/trigger_refresh_char" />
    <item android:icon="@android:drawable/ic_menu_preferences" android:id="@id/preferences" android:title="@string/menu_preferences" />
    <item android:icon="@android:drawable/ic_menu_help" android:id="@id/help_info_menu_item" android:title="@string/help_and_info" />
    <item android:icon="@android:drawable/ic_menu_send" android:id="@id/feedback_menu_item" android:title="@string/feedback" />
</menu>
