<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:background="@android:color/white" android:paddingLeft="128.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="8.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="30.0sp" android:paddingTop="32.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/not_synced_title" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingTop="32.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/wait_for_manual_sync_body" android:lineSpacingExtra="16.0dip" />
    <LinearLayout android:orientation="horizontal" android:paddingTop="48.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/manual_sync" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/manual_sync" />
        <Button android:id="@id/change_sync_settings" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="46.0dip" android:text="@string/change_sync_settings" />
    </LinearLayout>
</LinearLayout>
